Добавление JWT Auth, установка Laravel Breeze, настройка JWT Auth и работа с токеном в Swagger
