# routes/web.php
@@ -1,13 +1,49 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\ProfileController;
+use Illuminate\Foundation\Application;
+use Inertia\Inertia;
+
+Route::group(['middleware' => 'api', 'prefix' => 'auth'], function () {
+    Route::post('login', [\App\Http\Controllers\AuthController::class, 'login']);
+    Route::post('logout', [\App\Http\Controllers\AuthController::class, 'logout']);
+    Route::post('refresh', [\App\Http\Controllers\AuthController::class, 'refresh']);
+    Route::post('me', [\App\Http\Controllers\AuthController::class, 'me']);
+});
+
+
 
 
 Route::get('/', function () {
-    return view('welcome');
+    return Inertia::render('Welcome', [
+        'canLogin' => Route::has('login'),
+        'canRegister' => Route::has('register'),
+        'laravelVersion' => Application::VERSION,
+        'phpVersion' => PHP_VERSION,
+    ]);
 });
 
+Route::get('/dashboard', function () {
+    return Inertia::render('Dashboard');
+})->middleware(['auth', 'verified'])->name('dashboard');
+
+Route::middleware('auth')->group(function () {
+    Route::get('/profile', [ProfileController::class, 'edit'])->name('profile.edit');
+    Route::patch('/profile', [ProfileController::class, 'update'])->name('profile.update');
+    Route::delete('/profile', [ProfileController::class, 'destroy'])->name('profile.destroy');
+});
+
+
+//Route::get('/', function () {
+//    return view('welcome');
+//});
+
 \Illuminate\Foundation\Http\Middleware\VerifyCsrfToken::except('/api/*');
+\Illuminate\Foundation\Http\Middleware\VerifyCsrfToken::except('/auth/*');
 
-Route::resource('/api/posts', \App\Http\Controllers\PostController::class);
+Route::resource('/api/posts', \App\Http\Controllers\PostController::class)->middleware('jwt.auth');
 
+
+
+require __DIR__ . '/auth.php';
